use custom scrollbar WIP + fix thumbnail size

--- a/css/less/osd-hud.less
+++ b/css/less/osd-hud.less
@@ -503,6 +503,7 @@
     font-size: 11px;
     font-family: "Noto Sans";
     border-color:#D73449 !important;
+    border-width:1px;
   }
 
   &:after { 
